--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,6 @@
 
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "file"
+        "SESSION_DRIVER": "cookie"
     }
 }
